# my-db-sync-reports

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: main.rs  settings.rs
src/app/: app_ctx.rs
src/db/: dto.rs  mod.rs  postgres_repo.rs
src/http/: builder.rs  start_up.rs
src/http/controllers/home_controller/: index_action.rs  mod.rs  models.rs  table_action.rs
src/operations/: get_table_columns.rs  get_tables_difference.rs  mod.rs
